--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -3,11 +3,10 @@
   <div class="row">
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
       <div class="card-shadow">
-        <img alt="" class="card-img-top" src="https://www.tripsavvy.com/thmb/DlrYhJZqt0XjMUyrRbdooG7AI_Q=/1414x1414/smart/filters:no_upscale()/campsite5-bde7fa2945cd45ef994556195fc43e7f.jpg" >
+        <img alt="" class="card-img-top mb-3" src="https://www.tripsavvy.com/thmb/DlrYhJZqt0XjMUyrRbdooG7AI_Q=/1414x1414/smart/filters:no_upscale()/campsite5-bde7fa2945cd45ef994556195fc43e7f.jpg" >
+        
+        
         <div class="card-body">
-
-
-
           <h5 class="card-title mb-3"> Register New User</h5>
           <form action="/register" method="POST" class="validated-form" novalidate>
               <div class="mb-3">
@@ -39,8 +38,6 @@
               </div>
               
           </form>
-
-        
         </div>
       </div>
     </div>
