--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
                 </div>
             </header>
             <main class="px-3">
-                <h1>YelpCamp</h1>
+                <h1 class="colorTitle">YelpCamp</h1>
                 <p class="lead">Welcome to YelpCamp! 
                     <br>
                     Begin your camping adventure today!
