--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,8 @@
 <footer class="footer bg-dark py-3 mt-auto">
     <div class="container">
         <span class="" style="color:white">&copy 2022 YelpCamp</span>
+        <span class="" style="color:rgb(255, 255, 255)"> | </span>
+        <span class="" style="color:rgb(255, 255, 255)">Aleck Palad</span>
     </div>
 
 </footer>
