--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,9 @@
             </main>
 
             <footer class="mt-auto text-white-50">
-                <p>&copy; 2022 YelpCamp</p>
+                <span>&copy; 2022 YelpCamp</span>
+                <span> | </span>
+                <span>Aleck Palad</span>
             </footer>
         </div>
 
